<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/sunny_day">
    <TextView
            android:text="@string/tvCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCiudad" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorTextIcons"
            android:textSize="36sp" app:fontFamily="@font/roboto_light"/>
    <TextView
            android:text="@string/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescripcion" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCiudad" android:textColor="@color/colorTextIcons"
            app:fontFamily="@font/roboto_light" android:textSize="18sp"/>
    <TextView
            android:text="@string/tvGrados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGrados" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="324dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorTextIcons"
            android:textSize="70sp" app:fontFamily="@font/roboto" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/tvEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEstado" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvGrados" android:textColor="@color/colorTextIcons"
            app:fontFamily="@font/roboto" android:textSize="24sp"/>
    <TextView
            android:text="@string/tvMinima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMinima" app:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:layout_marginStart="112dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="112dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEstado" android:textColor="@color/colorTextIcons"/>
    <TextView
            android:text="@string/tvMaxima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMaxima" app:fontFamily="@font/roboto"
            android:textSize="14sp" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvEstado"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="100dp"
            android:textColor="@color/colorTextIcons"/>
    <TextView
            android:text="@string/tvSensacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSensacion" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMinima" app:fontFamily="@font/roboto"
            android:textColor="@color/colorTextIcons"/>
    <TextView
            android:text="@string/tvHumedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHumedad" android:textSize="18sp"
            app:fontFamily="@font/roboto" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSensacion" android:textColor="@color/colorTextIcons"/>
    <TextView
            android:text="@string/tvPresion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPresion" app:fontFamily="@font/roboto"
            android:textColor="@color/colorTextIcons" android:textSize="18sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSensacion" app:layout_constraintStart_toEndOf="@+id/tvHumedad"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvViento" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.425"/>
    <TextView
            android:text="@string/tvViento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvViento" android:textSize="18sp"
            app:fontFamily="@font/roboto" android:textColor="@color/colorTextIcons" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSensacion"/>
    <TextView
            android:text="@string/tvHumedadResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHumedadResultado" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHumedad" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="@color/colorTextIcons"/>
    <TextView
            android:text="@string/tvPresionResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPresionResultado" android:textSize="18sp"
            android:textColor="@color/colorTextIcons" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPresion" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvVientoResultado" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvHumedadResultado" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.554"/>
    <TextView
            android:text="@string/tvVientoResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvVientoResultado" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvViento" android:textSize="18sp"
            android:textColor="@color/colorTextIcons"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/tiBuscarCiudad" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginRight="64dp" android:hint="@string/etCiudadPista">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etCiudadPista" android:theme="@style/MyTheme.EditText"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>